# aoc-2023

./: .clang-format  .clangd  CMakeLists.txt
1/: CMakeLists.txt  main.cpp
2/: CMakeLists.txt  main.cpp
day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt  main.cpp
day9/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/include/aoc/: filesystem.hpp  print.hpp  string_conv.hpp  string_parser.hpp
